# Symmetria

./: .gitmodules  CMakeLists.txt  README.md
applications/: overlap_detection.cu
experiments/: driver.sh  experiment_common.cuh  plotting.ipynb  run.sbatch  run_combblas.cu  run_spsyrk.cu
include/: CooTriples.hpp  DistSpMat.hpp  DistSpMatCyclic.hpp  ProcMap.hpp  SpMat.hpp  Symmetria.hpp  TileWindow.hpp  common.h  dCSR_utils.cuh  matrix_market_io.h  mm_io.h  semirings.cuh  semirings.h
include/kernels/: dCSR_utils.cuh  device_tuples.cuh  galatic_spgemm.cuh  histogram.cuh  local_mult.cuh  make_csr.cuh  merge.cuh  mpi_utils.cuh  spsyrk.cuh  transpose_csr.cuh
include/utils/: Log.cuh  Log.hpp  MPITypes.h  Timer.hpp  alignment.h
src/: main.cu
test/: TestDriver.hpp  hello_world.cu  test_configs.json  test_local_mult.cu  test_spsyrk_bulksync_1d.cu  test_spsyrk_cyclic_2d.cu  test_transpose.cu  test_utils.cuh
test/test_matrices/: make_test_mat.py  n1000.mtx  n1000_product.mtx  n1000_transpose.mtx  n16.mm  n16.mtx  n16_product.mm  n16_product.mtx  n16_transpose.mm  n16_transpose.mtx  n17.mtx  n17_product.mtx  n17_small.mtx  n17_small_product.mtx  n17_transpose.mtx  n500.mtx  n500_product.mtx  n500_transpose.mtx  print_test_mat.py  sf_small.mtx  sf_small_product.mtx  ts_small.mtx  ts_small_product.mtx  ts_small_transpose.mtx
